--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -4,6 +4,7 @@
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055616.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13055659-flood-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055616.md#1" target="_blank">中国南方持续暴雨 乌江等流域或现超警洪水</a><br></h3>6月29日，中国大陆南方持续暴雨。中共水利部称，乌江、钱塘江闽江等......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月29日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13056031.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229469985-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13056031.md#1" target="_blank">应对中共经济胁迫 专家：建立“贸易北约”</a><br></h3>政策专家表示，西方民主国家应该建立一个贸易上的北约组织，在中国利用......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月29日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055714.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13051093-GettyImages-172632152-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055714.md#1" target="_blank">【唐浩视界】中共祸乱百年 五大冤案解密</a><br></h3>中共迎百年党庆，全力掩盖五大冤案？五大冤案真相解密，数千万人非正常......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月29日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13054689.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054933-88db938e02c3ecff2218b51a28c22ce1-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13054689.md#1" target="_blank">【拍案惊奇】习替江背锅卖国？外交部遭纵火</a><br></h3>统战部“七一”喊“完全统一”！习迫切要侵占台湾，陈用林示警，并指出......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月29日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055563.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055563.md#1" target="_blank">广东书记李希罕见缺席习主持的两个活动</a><br></h3>6月25日，习近平带领众多中共高官参观北大红楼及毛泽东在中南海的旧......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月29日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055335.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13055343-GettyImages-1325896156-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055335.md#1" target="_blank">【疫情6.29】奥运临近 日本病例增加引担忧</a><br></h3>据约翰?霍普金斯大学的统计数据，截至美东夏令时周二（6月29日）上......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月29日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055404.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055404.md#1" target="_blank">中共当局强调信党爱民 党庆前却扰民不停</a><br></h3>6月29日，中共“七一勋章”颁授仪式上，中共总书记习近平要求党员永......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月29日</td></tr>
@@ -28,6 +29,5 @@
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054138.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054210-0629-DJY-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054138.md#1" target="_blank">【新闻看点】习普说相声 官媒泄内情 美中开网战</a><br></h3>习普说相声？官媒泄内情；迫切拉俄站队，普京不参加中共党庆；中共网攻......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月29日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054073.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054167-08151-600x400-320x200.jpeg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054073.md#1" target="_blank">给中共法官的信：不能接受的起诉书</a><br></h3>这是一位中国大陆法轮功学员在收到法院通知，让他去法院签署起诉书后发......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月29日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13054384.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13015095-gettyimages-2062513--320x200.jpeg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13054384.md#1" target="_blank">众议院通过科研法案 让美国更具竞争力</a><br></h3>美国众议院周一（6月28日）通过了两项促进科学研究的立法，旨在让美......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月29日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053697.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053740-2106281210472378-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053697.md#1" target="_blank">陆船越界持刀棍抵抗 澎湖海巡压制7人送办</a><br></h3>中国“粤南澳渔31201”渔船越界捕捞，6月28日遭澎湖海巡查缉时......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月29日</td></tr>
 <tr><td><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mjhpml342/djy/blob/master/gb/nsc413.md#1<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mjhpml342/djy/blob/master/gb/nsc413.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc413.htm">https://www.epochtimes.com/gb/nsc413.htm</a>    （国内需<a href="https://github.com/mjhpml342/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
