--- a/gb/nf3046_3.md
+++ b/gb/nf3046_3.md
@@ -55,7 +55,9 @@
 
 梅洁平时除了照顾孩子，也有着繁忙的工作。去年，当她看到由于中共的隐瞒和不作为，导致中共病毒（COVID-19）在全球蔓延，造成无数人染疫、.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月15日 9:41 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/4/13/n12877908.md#1" target="_blank">王友群：曾庆红老家的大贪官史文清</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/4/13/n12877908.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12877909-2516a7f12eb2038be97d7b35eedfae86-600x400-150x120.jpeg" align ="left"></a>4月12日，中共党媒发布消息称，原江西省人大副主任史文清因涉嫌受贿罪被逮捕。史文清担任江西省委常委、赣州市委书记时，是他当官掌权的巅峰时期，也是他贪财好色的巅峰时期。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月14日 3:49 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/6/n12927545.md#1" target="_blank">三退声明精选（2021/05/05）</a><br></h3>今日中国讲真话就意味着可能坐牢，这是一个普遍现象。而高智晟律师因为维护法治、仗义执言被失踪，活不见人、死不见尸。中共就是这样明目张胆、胡作非为。若是高律师违法为什么不开庭审理，连关在哪都不知道，遮羞布都不要了。这就是中共的“法治”。比黑帮还要黑，是最大的黑社会。我们声明退出这个黑帮组织，做回清白的人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 10:45 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/4/12/n12875079.md#1" target="_blank">王友群：强烈谴责暴徒再袭香港大纪元印刷厂</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/4/12/n12875079.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12875132-0841e8a4c7170680f2b50bc114dac0b5-150x120.jpg" align ="left"></a>4月12日清晨，四名暴徒强行闯入香港大纪元印刷厂，肆意破坏。一名歹徒轮起大锤子，对着印刷机控制台、出报机、电脑等一通乱砸；另一名歹徒从环保袋中拿出混凝土碎块，撒在出报机和打报机上，作案持续约2分钟，然后迅速逃离，一部电脑的CPU被抢走。
+
+这是近些年暴徒多次袭击香港大纪元印刷厂之后又一次严重的暴力刑事犯罪。目的在于干扰、破坏香港大纪元秉持正义良知报导真相.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月12日 10:48 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/3/n12920632.md#1" target="_blank">参考资料：纵观天下（2021年５月传单/传真）</a><br></h3>翻墙见真相 觉醒急三退　纽约游行集会 纪念四?二五　复辟文革丧人心　病毒源头直指中共军方　我想找一本你们的书看　大饥荒血泪史......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月03日 2:31 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/4/29/n12912608.md#1" target="_blank">三退声明精选（2021/04/28）</a><br></h3>我从小就见证中共邪党的滔天罪恶。小时候母亲练法轮大法被中共黑警强制停止信仰。小学时，我被校园霸凌，但因为霸凌者父亲是市政府党员，老师不敢管，给我留下了很大的心里阴影。我还被老师强制要求加入少先队。初中时，我被老师强制要求加入共青团。我还听闻班上的官二代的父母给老师送礼。因为我父母离婚家穷没送礼，我被安排坐在最后一排。高中我开始学会翻墙，了解了江泽民和中共的罪.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 10:58 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/4/27/n12907580.md#1" target="_blank">三退声明精选（2021/04/26）</a><br></h3>我们经过长期的亲身体验：中共是一个靠谎言欺骗、靠暴力杀人、靠独裁党主专制、靠强夺人民的知识和一切财富为己有、逆天叛道，视人民为草芥，视政权、视统治者的利益为神圣法宝。对内强夺强压，把整个大陆变成了监狱，把全民当成了敌人。搞血腥镇压。仅举一个十二栋楼房的小区，就安装了一百二十个摄像头。对外从各方面派大量情报特务渗透，企图霸占全球，实乃魔鬼魔党。我们和这个不仁不.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 11:02 AM							</td></tr>
